--- a/ssheets/index.css
+++ b/ssheets/index.css
@@ -84,9 +84,9 @@ IMG {
     background-size: 100% 100%;
     margin-top: 55px;
     margin-bottom: 5px;
-    margin-left: 17.5%;
+    margin-left: 12.5%;
     height: 55px;
-    width: 55%;
+    width: 65%;
     border-color: #002000;
     border-width: 4px;
     border-style: ridge;
@@ -100,7 +100,7 @@ IMG {
 }
 
 #navbar UL {
-    padding: 5px;
+    padding: 4px;
     list-style-type: none;
     text-align: center;
     margin: 10px;
@@ -115,7 +115,7 @@ IMG {
     text-decoration: none;
     font-family: courier;
     font-size: 1.25em;
-    padding: .1em 2em;
+    padding: .1em 1em;
     color: #d4efff;
     background-color: #001000;
     border-color: #002000;
